--- a/nsf-demo-stock-viewer/nsf.yml
+++ b/nsf-demo-stock-viewer/nsf.yml
@@ -2,7 +2,7 @@ nsf:
   type: http
   nsfServer: 'http://nsf-server.jfyl.upgrade.test.com'
   application:
-    name: nsf-viewer
+    name: nsf-viewer-shoudong
     version: 0.0.1
     projectCode: project1
     envCode: prod
