--- a/nsf-demo-stock-viewer/Dockerfile-nsf-shoudong
+++ b/nsf-demo-stock-viewer/Dockerfile-nsf-shoudong
@@ -15,6 +15,6 @@ ADD ./nsf-demo-stock-viewer/target/*.jar /opt/nsf/
 ADD ./nsf-demo-stock-viewer/nsf.yml /opt/nsf/nsf.yml
 
 
-ENV JAVA_OPTS='-javaagent:/opt/nsf/nsf-agent-fat.jar=nsf -Dstock_provider_url=http://nsf-provider -Dstock_advisor_url=http://nsf-advisor'
+ENV JAVA_OPTS='-javaagent:/opt/nsf/nsf-agent-fat.jar=nsf -Dstock_provider_url=http://nsf-provider-shoudong -Dstock_advisor_url=http://nsf-advisor-shoudong'
 
 CMD java $JAVA_OPTS -jar /opt/nsf/nsf-demo-stock-viewer-1.0-SNAPSHOT.jar
