--- a/nsf-demo-stock-provider/Dockerfile
+++ b/nsf-demo-stock-provider/Dockerfile
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=haarbor.cloud.netease.com/qztest/cicd-mvn3.5-jdk8:v2.1.1
+ARG BASE_IMAGE=harbor.cloud.netease.com/qztest/cicd-mvn3.5-jdk8:v2.1.1
 
 FROM ${BASE_IMAGE}
 
